--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -11,10 +11,11 @@
     </mat-card-title>
 
     <mat-card-title div fxLayout="row" fxLayoutAlign="center center" class="title">Forgot password ?</mat-card-title>
-    <mat-card-subtitle class="subtitle" fxLayoutAlign="center center">Enter your email id to reset password</mat-card-subtitle>
+    <mat-card-subtitle class="subtitle" fxLayoutAlign="center center">Enter your email id to reset password
+    </mat-card-subtitle>
 
     <form>
-      <div fxLayoutAlign="center center"  class="email">
+      <div fxLayoutAlign="center center" class="email">
         <mat-form-field appearance="outline" fxFlex="100" class="email" fxLayoutAlign="center center">
           <mat-label>Email id</mat-label>
           <input matInput placeholder="Enter your email id" [formControl]="emailFormControl"
@@ -31,16 +32,16 @@
       </div>
 
 
-          <div class="for-button">
-              <button mat-button (click)="login()" class="link" fxLayoutAlign="center">
-                  Sign in insted
-                </button>
+      <div class="for-button">
+        <button mat-button (click)="login()" class="link" fxLayoutAlign="center">
+          Sign in insted
+        </button>
         <button class="button" mat-button (click)="login()" mat-raised-button color="primary">Submit</button>
-        
-        </div>
 
-       
-    
+      </div>
+
+
+
     </form>
 
   </mat-card>
