--- a/src/app/components/imagecropper/imagecropper.component.html
+++ b/src/app/components/imagecropper/imagecropper.component.html
@@ -1,12 +1,5 @@
 <!-- <input type="file" (change)="fileChangeEvent($event)" /> -->
-<image-cropper
-    [imageChangedEvent]="data"
-    [maintainAspectRatio]="true"
-    [aspectRatio]="4/ 4"
-    [resizeToWidth]="128"
-    format="png"
-    (imageCropped)="imageCropped($event)"
-   
-></image-cropper>
-<button  mat-button  (click)="cancel()">cancel</button>
-<button  mat-button   (click)="submit()">Submit</button>
+<image-cropper [imageChangedEvent]="data" [maintainAspectRatio]="true" [aspectRatio]="4/ 4" [resizeToWidth]="128"
+    format="png" (imageCropped)="imageCropped($event)"></image-cropper>
+<button mat-button (click)="cancel()">cancel</button>
+<button mat-button (click)="submit()">Submit</button>
