--- a/src/app/components/updatenote/updatenote.component.html
+++ b/src/app/components/updatenote/updatenote.component.html
@@ -2,17 +2,18 @@
 
   <div style="margin: 20px">
     <div fxFlex="100" fxLayoutAlign='space-between start' fxLayout='row'>
-        <div *ngIf="data.more !='trash'"><input matInput [(ngModel)]="data.array.title" placeholder="add title here"></div>
-        <div class="title" *ngIf="data.more =='trash'" (click)='openSnackBar()'>{{data.array.title}}</div>
-          <div *ngIf="data.more !='trash'" >
-            <button mat-icon-button color="basic">
-        <div class="barpin" *ngIf="data.array.pinned" >
-          <img src="../../../assets/image/pinbar.svg" (click)='doUnPin(data.array)'/>
-        </div>
-        <div class="barpin"  *ngIf="!data.array.pinned">
-          <img src="../../../assets/image/unpinbar.svg" (click)='doPin(data.array)'/>
-        </div>
-      </button>
+      <div *ngIf="data.more !='trash'"><input matInput [(ngModel)]="data.array.title" placeholder="add title here">
+      </div>
+      <div class="title" *ngIf="data.more =='trash'" (click)='openSnackBar()'>{{data.array.title}}</div>
+      <div *ngIf="data.more !='trash'">
+        <button mat-icon-button color="basic">
+          <div class="barpin" *ngIf="data.array.pinned">
+            <img src="../../../assets/image/pinbar.svg" (click)='doUnPin(data.array)' />
+          </div>
+          <div class="barpin" *ngIf="!data.array.pinned">
+            <img src="../../../assets/image/unpinbar.svg" (click)='doPin(data.array)' />
+          </div>
+        </button>
       </div>
     </div>
   </div>
@@ -20,27 +21,28 @@
   <div style="margin:20px">
     <!-- ....disc...... -->
 
-    <div *ngIf="data.more!='trash'"><input class='desc' matInput [(ngModel)]="data.array.description" placeholder="Add description"></div>
+    <div *ngIf="data.more!='trash'"><input class='desc' matInput [(ngModel)]="data.array.description"
+        placeholder="Add description"></div>
     <div *ngIf="data.more=='trash'" (click)='openSnackBar()'>{{data.array.description}}</div>
 
     <!-- ..... -->
-    
-      <!-- <app-iconlist></app-iconlist> -->
 
-      <div fxLayoutAlign='space-between end'>
-        <div fxFlex='100' *ngIf="data.more=='trash'">
-          <button mat-icon-button [matMenuTriggerFor]="menu" colour="basic" matTooltip="more">
-            <img id="img" src="../../../assets/image/outline-more_vert-24px.svg" />
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item >Delete Forever</button>
-            <button mat-menu-item >Restore</button>
-          </mat-menu>
-        </div>
+    <!-- <app-iconlist></app-iconlist> -->
 
-        <!-- reminder -->
+    <div fxLayoutAlign='space-between end'>
+      <div fxFlex='100' *ngIf="data.more=='trash'">
+        <button mat-icon-button [matMenuTriggerFor]="menu" colour="basic" matTooltip="more">
+          <img id="img" src="../../../assets/image/outline-more_vert-24px.svg" />
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>Delete Forever</button>
+          <button mat-menu-item>Restore</button>
+        </mat-menu>
+      </div>
 
-    <!-- <div  fxLayout="row" fxLayout="row wrap">
+      <!-- reminder -->
+
+      <!-- <div  fxLayout="row" fxLayout="row wrap">
       <mat-chip-list class="chip">
 
         <div *ngIf="(todaydate | date: 'shortDate') == (data.array.reminder | date: 'shortDate') && (data.array.reminder!='')">
@@ -64,13 +66,13 @@
       </mat-chip-list>
   </div> -->
 
-<!-- icon -->
-        <div fxFlex='100'  *ngIf="data.more!='trash'">
-          <app-iconlist  [card]=data.array ></app-iconlist>
-        </div>
-
-        <button fxLayoutAlign='end end' mat-button [mat-dialog-close]="data" cdkFocusInitial >close</button>
+      <!-- icon -->
+      <div fxFlex='100' *ngIf="data.more!='trash'">
+        <app-iconlist [card]=data.array></app-iconlist>
       </div>
+
+      <button fxLayoutAlign='end end' mat-button [mat-dialog-close]="data" cdkFocusInitial>close</button>
     </div>
+  </div>
 
 </div>
