--- a/src/app/components/updatenote/updatenote.component.scss
+++ b/src/app/components/updatenote/updatenote.component.scss
@@ -1,8 +1,8 @@
 ::ng-deep .mat-dialog-container {
   padding: 0%;
 }
-.title{
-  word-break: break-all
+.title {
+  word-break: break-all;
 }
 // .barpin {
 //   border: none;
