--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,12 +1,12 @@
-::ng-deep .mat-menu-panel{
+::ng-deep .mat-menu-panel {
   overflow: hidden;
-  }
-
-::ng-deep .mat-tooltip  {
-  white-space: pre-line    !important;
 }
 
-// To import from scss fiel
+::ng-deep .mat-tooltip {
+  white-space: pre-line !important;
+}
+
+//To import color from scss color file
 @import "../../scss/colour.scss";
 
 .toolbar {
@@ -15,14 +15,17 @@
   flex-direction: row;
   background-color: white;
 }
+
 .iconTitle {
   display: flex;
 }
+
 .titleFundoo {
   vertical-align: middle;
   line-height: -45px;
   width: 100%;
 }
+
 .searchBar {
   display: flex;
   width: 50%;
@@ -45,11 +48,13 @@
   left: 0;
   right: 0;
 }
+
 // Assure that toolbar stay on top of the content always
 .example-is-mobile .toolbar {
   position: fixed;
   z-index: 2;
 }
+
 .menu-button {
   color: #757575;
   // margin-left: 0%;
@@ -66,6 +71,7 @@
   border: none;
   outline: none;
 }
+
 .mat-form-field-appearance-outline .mat-form-field-outline {
   color: white;
 }
@@ -83,9 +89,10 @@
   left: 0;
   right: 0;
 }
+
 .example-is-mobile .example-toolbar {
-position: fixed;
-/* Make sure the toolbar will stay on top of the content as it scrolls past. */
+  position: fixed;
+  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
   z-index: 2;
 }
 
@@ -94,7 +101,7 @@ h1.example-app-name {
 }
 
 .example-sidenav-container {
-/* When the sidenav is not fixed, stretch the sidenav container to fill the 
+  /* When the sidenav is not fixed, stretch the sidenav container to fill the 
 available space. This causes `<mat-sidenav-content>` to act as our scrolling 
 element for desktop layouts. */
   flex: 1;
@@ -106,6 +113,7 @@ element for desktop layouts. */
        `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
+
 .example-header-image {
   background-image: url("../../../assets/image/profile.jpg");
   background-size: cover;
@@ -120,13 +128,16 @@ element for desktop layouts. */
   overflow: hidden;
   // padding: 25px 45px;
 }
+
 #user-image-button {
   margin-left: 6%;
 }
+
 .profileMenu {
   min-width: 200px;
   max-width: 250px;
 }
+
 .sidenav {
   border-color: white;
 }
@@ -135,6 +146,7 @@ element for desktop layouts. */
   font-size: 20px;
   font-family: sans-serif;
 }
+
 mat-sidenav {
   width: 250px;
 }
@@ -144,27 +156,33 @@ mat-sidenav {
 
   border: 1px;
 }
+
 #img1 {
   margin-right: 10%;
   opacity: 0.6;
 }
+
 #img2 {
   margin-right: 10%;
   opacity: 0.6;
 }
+
 #edit {
   margin-right: 10%;
   opacity: 0.6;
 }
+
 #img4 {
   margin-right: 10%;
   opacity: 0.6;
 }
+
 #img5 {
   margin-right: 10%;
   opacity: 0.6;
 }
-#labels{
+
+#labels {
   // margin-left: 10%;
   opacity: 0.6;
 }
@@ -202,6 +220,7 @@ h1.example-app-name {
   flex-direction: row;
   float: right;
 }
+
 .apps {
   display: flex;
   flex-direction: row;
@@ -223,41 +242,44 @@ h1.example-app-name {
 }
 
 .mat-raised-button:not([class*="mat-elevation-z"]) {
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   margin-left: 36%;
 }
 
 .mat-stroked-button:not([class*="mat-elevation-z"]) {
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14),
-    0 0 0 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14), 0 0 0 0 rgba(0, 0, 0, 0.12);
   width: 140px;
 }
 
 #menu {
   opacity: 0.6;
 }
+
 #search {
   opacity: 0.6;
 }
+
 #refresh {
   opacity: 0.8;
 }
+
 #gridlist {
   img {
     opacity: 0.6;
   }
 }
+
 #title {
   opacity: 0.6;
   font-family: sans-serif;
   // font-style: italic;
   margin-top: 7%;
 }
+
 .signout {
   margin-left: auto;
   margin-right: auto;
-  margin-left: 130px
+  margin-left: 130px;
 }
 
 // .gb_Ta {
@@ -271,10 +293,12 @@ h1.example-app-name {
 .gb_7b.gb_z {
   display: block;
 }
+
 .gb_Ta {
   outline: none;
   transform: translateZ(0);
 }
+
 .gb_z {
   z-index: 991;
   line-height: normal;
@@ -304,39 +328,46 @@ h1.example-app-name {
   margin: 20px;
   white-space: nowrap;
 }
+
 .userProfile {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 
 .profileImage {
-  margin-top: 0px
+  margin-top: 0px;
 }
+
 .my-tooltip {
   height: 100px;
 }
-.setting{
-  opacity: 0.6
-}
-.app{
+
+.setting {
   opacity: 0.6;
-}.backgroundimage{
-  width: auto
 }
-.change{
+
+.app {
+  opacity: 0.6;
+}
+
+.backgroundimage {
+  width: auto;
+}
+
+.change {
   bottom: 0;
-    color: #fff;
-    font-size: 9px;
-    font-weight: bold;
-    left: 0;
-    line-height: 9px;
-    position: absolute;
-    padding: 7px 0;
-    text-align: center;
-    width: 96px;
-    margin-left: -15px;
-    
+  color: #fff;
+  font-size: 9px;
+  font-weight: bold;
+  left: 0;
+  line-height: 9px;
+  position: absolute;
+  padding: 7px 0;
+  text-align: center;
+  width: 96px;
+  margin-left: -15px;
 }
-.profileName{
+
+.profileName {
   box-sizing: border-box;
   text-align: center;
   width: 100%;
@@ -344,10 +375,11 @@ h1.example-app-name {
   padding: 0px;
   margin-left: 23px;
   margin-top: -55px;
-  font-family: 'Times New Roman';
-  font-weight: bold
+  font-family: "Times New Roman";
+  font-weight: bold;
 }
-.profileEmail{
+
+.profileEmail {
   box-sizing: border-box;
   text-align: center;
   width: 100%;
@@ -355,19 +387,22 @@ h1.example-app-name {
   padding: 34px;
   margin-left: 33px;
   margin-top: -28px;
-  opacity: 0.6
+  opacity: 0.6;
 }
-.imageSelect{
-  margin-left: 7px
+
+.imageSelect {
+  margin-left: 7px;
 }
-.profile{
+
+.profile {
   overflow: hidden;
-  
 }
-::ng-deep .mat-menu-panel{
-overflow: hidden;
+
+::ng-deep .mat-menu-panel {
+  overflow: hidden;
 }
-.searchNotes{
+
+.searchNotes {
   display: flex;
   width: 50%;
 }
