--- a/src/app/components/labelsedit/labelsedit.component.scss
+++ b/src/app/components/labelsedit/labelsedit.component.scss
@@ -1,14 +1,17 @@
-.title{
-    font-weight: bold
+.title {
+  font-weight: bold;
 }
-.editLable{
-    max-height: 392px;
-    overflow-y: auto;
-    padding: 15px;
+
+.editLable {
+  max-height: 392px;
+  overflow-y: auto;
+  padding: 15px;
 }
-.done{
-    margin-left: 75%
+
+.done {
+  margin-left: 75%;
 }
-#button{
-    opacity: 0.6
+
+#button {
+  opacity: 0.6;
 }
