--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,6 +1,6 @@
 @import "../../scss/colour.scss";
 
-.card{
+.card {
   width: 50;
   height: 90%;
   margin-left: auto;
@@ -8,75 +8,68 @@
   margin-bottom: 5%;
   margin-top: 5%;
   border-radius: 02%;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.459); 
-
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.459);
 }
 .row {
-  height:33.3vh;
+  height: 33.3vh;
 }
- .fundoo{
-   text-align: center;
-   font-family: 'Times New Roman';
-   font: bold;
-   margin-top: 05%;
-   font-size: 200%
- }
-.f{
-  color: $blue ;
+.fundoo {
+  text-align: center;
+  font-family: "Times New Roman";
+  font: bold;
+  margin-top: 05%;
+  font-size: 200%;
+}
+.f {
+  color: $blue;
   font-weight: bold;
-  font-family: 'Times New Roman';
-  text-align: center
+  font-family: "Times New Roman";
+  text-align: center;
 }
-.u{
+.u {
   color: $red;
   font-weight: bold;
   // font-family: sans-serif;
-  text-align: center
-  
+  text-align: center;
 }
-.n{
+.n {
   color: $yellow;
   font-weight: bold;
   // font-family: sans-serif;
-  text-align: center
-
+  text-align: center;
 }
-.d{
+.d {
   color: $blue;
   font-weight: bold;
   // font-family: sans-serif;
-  text-align: center
-
+  text-align: center;
 }
-.o{
+.o {
   color: $green;
   font-weight: bold;
   // font-family: sans-serif;
-  text-align: center
-
+  text-align: center;
 }
-.oo{
+.oo {
   color: $red;
   font-weight: bold;
   // font-family: sans-serif;
-  text-align: center
+  text-align: center;
 }
 
-
-
-#register{
+#register {
   display: flex;
   justify-content: space-between;
   margin-left: 18%;
-  margin-right: 15%
+  margin-right: 15%;
 }
-.header{
+.header {
   text-align: center;
   margin-left: 25%;
-  font-size: 180%
+  font-size: 180%;
 }
 .mat-card-title {
-  text-align: center
+  text-align: center;
 }
 .mat-card-subtitle {
   font-size: 90%;
@@ -84,45 +77,42 @@
   font-family: sans-serif;
 }
 
-.email{
+.email {
   width: 100%;
-  // box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.459); 
+  // box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.459);
 }
 
-.sign{
+.sign {
   font-weight: 100;
-  margin-left:0%;
+  margin-left: 0%;
   font-family: sans-serif;
 }
 
-
-.email{
+.email {
   width: 80%;
   align-content: center;
   // margin-left: 40px
 }
-.password{
+.password {
   width: 80%;
   align-content: center;
   // margin-left: 40px
 }
 
-.link{
+.link {
   color: $lblue;
-  margin-left: -18%
-  
+  margin-left: -18%;
 }
-.pass-link{
+.pass-link {
   color: $lblue;
-  margin-left: 5%
+  margin-left: 5%;
 }
-#sigi-button{
+#sigi-button {
   background-color: $lblue;
-  font-family: 'Gill Sans';
+  font-family: "Gill Sans";
   // width: 30%;
-  margin-right: -6%
-  
+  margin-right: -6%;
 }
-#forget{
-  color : $lgreen;
+#forget {
+  color: $lgreen;
 }
