--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,92 +1,72 @@
 <html>
-  <div fxLayoutAlign="space-around center" fxFlex="100">
-    <mat-card fxFlex="40" class="card" fxFlex.xs="100">
-      <mat-card-title class="fundoo">
-        <span class="f">F</span>
-        <span class="u">u</span>
-        <span class="n">n</span>
-        <span class="d">d</span>
-        <span class="o">o</span>
-        <span class="oo">o</span>
-      </mat-card-title>
-      <mat-card-header>
-        <mat-card-title calss="acc">Create your Fundoo Account</mat-card-title>
-        <mat-card-subtitle class="acc1">Continue to Fundoo</mat-card-subtitle>
-      </mat-card-header>
-    
+<div fxLayoutAlign="space-around center" fxFlex="100">
+  <mat-card fxFlex="40" class="card" fxFlex.xs="100">
+    <mat-card-title class="fundoo">
+      <span class="f">F</span>
+      <span class="u">u</span>
+      <span class="n">n</span>
+      <span class="d">d</span>
+      <span class="o">o</span>
+      <span class="oo">o</span>
+    </mat-card-title>
+    <mat-card-header>
+      <mat-card-title calss="acc">Create your Fundoo Account</mat-card-title>
+      <mat-card-subtitle class="acc1">Continue to Fundoo</mat-card-subtitle>
+    </mat-card-header>
 
-      <body>
-        <div fxLayout="row" fxLayout.xs="column"fxLayoutGap="2%">
-          <mat-form-field   fxFlex.xs="100"  appearance="outline" id="firstname">
-            <mat-label fxFlex="40" aria-autocomplete="off"> First name</mat-label>
-            <input matInput placeholder="First name" [formControl]="firstname" />
-          </mat-form-field>
-          <mat-form-field  fxFlex.xs="100"   appearance="outline" id="lastname">
-            <mat-label fxFlex="40" aria-autocomplete="off"> Last name</mat-label>
-            <input matInput placeholder="Last name" [formControl]="lastname"/>
-          </mat-form-field>
-        </div>
 
-        <div>
-          <mat-form-field appearance="outline" class="email">
-            <mat-label aria-autocomplete="off">Email id</mat-label>
-            <input
-              matInput
-              placeholder="Enter your email id"
-              [formControl]="emailFormControl"
-              [errorStateMatcher]="matcher"
-            />
-            <mat-hint fxShow.sm="false" fxShow.xs="false" fxShow="true"
-              >Errors appear instantly!</mat-hint
-            >
-            <mat-error
-              *ngIf="
+    <body>
+      <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="2%">
+        <mat-form-field fxFlex.xs="100" appearance="outline" id="firstname">
+          <mat-label fxFlex="40" aria-autocomplete="off"> First name</mat-label>
+          <input matInput placeholder="First name" [formControl]="firstname" />
+        </mat-form-field>
+        <mat-form-field fxFlex.xs="100" appearance="outline" id="lastname">
+          <mat-label fxFlex="40" aria-autocomplete="off"> Last name</mat-label>
+          <input matInput placeholder="Last name" [formControl]="lastname" />
+        </mat-form-field>
+      </div>
+
+      <div>
+        <mat-form-field appearance="outline" class="email">
+          <mat-label aria-autocomplete="off">Email id</mat-label>
+          <input matInput placeholder="Enter your email id" [formControl]="emailFormControl"
+            [errorStateMatcher]="matcher" />
+          <mat-hint fxShow.sm="false" fxShow.xs="false" fxShow="true">Errors appear instantly!</mat-hint>
+          <mat-error *ngIf="
                 emailFormControl.hasError('email') &&
                 !emailFormControl.hasError('required')
-              "
-            >
-              Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
-              Email is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
+              ">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="2%">
-          <mat-form-field appearance="outline" class="password">
-            <mat-label aria-autocomplete="off">Password</mat-label>
-            <input
-              matInput
-              placeholder="Enter your password"
-              [type]="hide ? 'password' : 'text'"
-              [formControl]="password"
-              autocomplete="off"
-              requried
-            />
-            <mat-hint fxShow.sm="false" fxShow.xs="false" fxShow="true"
-              >Use 8 or more characters with numbers & Symbole</mat-hint>
-          </mat-form-field>
+      <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="2%">
+        <mat-form-field appearance="outline" class="password">
+          <mat-label aria-autocomplete="off">Password</mat-label>
+          <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'" [formControl]="password"
+            autocomplete="off" requried />
+          <mat-hint fxShow.sm="false" fxShow.xs="false" fxShow="true">Use 8 or more characters with numbers & Symbole
+          </mat-hint>
+        </mat-form-field>
 
-          <mat-form-field appearance="outline" class="confirm">
-            <mat-label aria-autocomplete="off">Confirm</mat-label>
-            <input
-              matInput
-              placeholder="Enter your password"
-              [type]="hide ? 'password' : 'text'"
-              [formControl]="confirmPassword"
-              autocomplete="off"
-              requried
-            />
-            <!-- <mat-hint>Use 8 or more characters with a mix of letters, numbers & symbols</mat-hint>  -->
-          </mat-form-field>
-          <mat-icon fxLayoutAlign="end center" id="suffix" matSuffix (click)="hide = !hide">{{
+        <mat-form-field appearance="outline" class="confirm">
+          <mat-label aria-autocomplete="off">Confirm</mat-label>
+          <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'"
+            [formControl]="confirmPassword" autocomplete="off" requried />
+          <!-- <mat-hint>Use 8 or more characters with a mix of letters, numbers & symbols</mat-hint>  -->
+        </mat-form-field>
+        <mat-icon fxLayoutAlign="end center" id="suffix" matSuffix (click)="hide = !hide">{{
             hide ? "visibility_off" : "visibility"
           }}</mat-icon>
-        </div>
+      </div>
 
-       
-          <!-- <mat-form-field class="acc-type">
+
+      <!-- <mat-form-field class="acc-type">
             <mat-select [(value)]="selected">
               <mat-hint>Please select account type</mat-hint>
               <mat-option>Account Type</mat-option>
@@ -96,41 +76,29 @@
             </mat-select>
           </mat-form-field> -->
 
-          <!-- Sign up button -->
-          <!-- <br>
+      <!-- Sign up button -->
+      <!-- <br>
           <mat-divider></mat-divider>
           <br> -->
-          <br>
-          <div class="signup-in">
-          
+      <br>
+      <div class="signup-in">
 
-          <button
-          mat-button
-          (click)="login()"
-          class="sinin-link"
-          fxLayoutAlign="center"
-        >
+
+        <button mat-button (click)="login()" class="sinin-link" fxLayoutAlign="center">
           Sign in insted
         </button>
 
-        <button
-            id="signbutton"
-            mat-button
-            (click)="register()"
-            fxLayoutAlign="center center"
-            mat-raised-button
-            color="primary"
-            mat-button
-            aria-label="Show an example snack-bar"
-          >
-            Sign up
-          </button>
-        </div>
+        <button id="signbutton" mat-button (click)="register()" fxLayoutAlign="center center" mat-raised-button
+          color="primary" mat-button aria-label="Show an example snack-bar">
+          Sign up
+        </button>
+      </div>
 
-        <!-- <p id="secleted">Your account type : {{selected}} </p> -->
+      <!-- <p id="secleted">Your account type : {{selected}} </p> -->
 
-        
-      </body>
-    </mat-card>
-  </div>
+
+    </body>
+  </mat-card>
+</div>
+
 </html>
