--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -1,81 +1,51 @@
 <html>
-  <div fxLayoutAlign="space-around center" fxFlex="100">
-    <mat-card fxFlex="30" class="card" fxFlex.xs="100">
-      <mat-card-title
-        class="fundoo"
-        div
-        fxLayout="row"
-        fxLayoutAlign="center center"
-      >
-        <span class="f">F</span>
-        <span class="u">u</span>
-        <span class="n">n</span>
-        <span class="d">d</span>
-        <span class="o">o</span>
-        <span class="oo">o</span>
-      </mat-card-title>
+<div fxLayoutAlign="space-around center" fxFlex="100">
+  <mat-card fxFlex="30" class="card" fxFlex.xs="100">
+    <mat-card-title class="fundoo" div fxLayout="row" fxLayoutAlign="center center">
+      <span class="f">F</span>
+      <span class="u">u</span>
+      <span class="n">n</span>
+      <span class="d">d</span>
+      <span class="o">o</span>
+      <span class="oo">o</span>
+    </mat-card-title>
 
-      <mat-card-title
-        class="reset-title"
-        fxLayout="row"
-        fxLayoutAlign="center center"
-        >Reset your password</mat-card-title
-      >
+    <mat-card-title class="reset-title" fxLayout="row" fxLayoutAlign="center center">Reset your password
+    </mat-card-title>
 
-      <mat-card-subtitle
-        class="sub-title"
-        div
-        fxLayout="row"
-        fxLayoutAlign="center center"
-        >To continue to your Fundoo Account</mat-card-subtitle
-      >
+    <mat-card-subtitle class="sub-title" div fxLayout="row" fxLayoutAlign="center center">To continue to your Fundoo
+      Account</mat-card-subtitle>
 
-      <div fxLayout="column" fxLayoutAlign="space-around center" class="new-pass">
+    <div fxLayout="column" fxLayoutAlign="space-around center" class="new-pass">
       <mat-form-field appearance="outline" class="password">
         <mat-label>Enter new password</mat-label>
-        <input
-          matInput
-          placeholder="Enter new password"
-          [type]="hide ? 'password' : 'text'"
-          [formControl]="password"
-          autocomplete="off"
-          requried
-        />
+        <input matInput placeholder="Enter new password" [type]="hide ? 'password' : 'text'" [formControl]="password"
+          autocomplete="off" requried />
         <mat-icon matSuffix (click)="hide = !hide">{{
                 hide ? "visibility_off" : "visibility"
               }}</mat-icon>
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="con-password">
-            <mat-label>Confirm password</mat-label>
-            <input
-              matInput
-              placeholder="confirm password"
-              [type]="hide ? 'password' : 'text'"
-              [formControl]="password"
-              autocomplete="off"
-              requried
-            />
-            <mat-icon matSuffix (click)="hide = !hide">{{
+        <mat-label>Confirm password</mat-label>
+        <input matInput placeholder="confirm password" [type]="hide ? 'password' : 'text'" [formControl]="password"
+          autocomplete="off" requried />
+        <mat-icon matSuffix (click)="hide = !hide">{{
                     hide ? "visibility_off" : "visibility"
                   }}</mat-icon>
-            <!-- <mat-hint
+        <!-- <mat-hint
               ><a id="forget" href="/forgotpassword">Forgot password</a></mat-hint
             > -->
-          </mat-form-field>
+      </mat-form-field>
 
-          <button
-          id="confirm-button"
-          fxLayoutAlign="center center"
-          mat-raised-button
-          color="primary" (click)="submit()"
-        >
+      <button id="confirm-button" fxLayoutAlign="center center" mat-raised-button color="primary" (click)="submit()">
         Confirm
-        </button>
-        <button mat-button (click)="loginTo()" class="link" fxLayoutAlign="center">
-          Sign in insted
-        </button>
+      </button>
+      <button mat-button (click)="loginTo()" class="link" fxLayoutAlign="center">
+        Sign in insted
+      </button>
     </div>
-    </mat-card>
-  </div>
+  </mat-card>
+</div>
+
 </html>
