--- a/src/app/components/take-note/take-note.component.scss
+++ b/src/app/components/take-note/take-note.component.scss
@@ -67,19 +67,18 @@ element.style {
   border: none;
   outline: none;
   user-select: none;
-  margin-top: 10px
+  margin-top: 10px;
 }
-#img2{
-
-      opacity: 0.7
+#img2 {
+  opacity: 0.7;
 }
 #pin {
   img {
-      opacity: 0.7
+    opacity: 0.7;
   }
 }
 #unpin {
   img {
-      opacity: 0.7
+    opacity: 0.7;
   }
 }
