--- a/src/app/components/trash/trash.component.html
+++ b/src/app/components/trash/trash.component.html
@@ -1,6 +1,8 @@
 <div fxLayoutAlign='center center' class="trash" fxLayout='row'>
-        "Notes in Trash are deleted after 7 days."
-          <button fxFlexOffset="5" class="emt-trash" fxLayoutAlign='center center'  mat-button (click)="emptybin()">Empty Trash</button>
-          </div>
+  "Notes in Trash are deleted after 7 days."
+  <button fxFlexOffset="5" class="emt-trash" fxLayoutAlign='center center' mat-button (click)="emptybin()">Empty
+    Trash</button>
+</div>
 
-<app-displaynote [cards]="deletedcards"  fxLayoutGap='2%' [more]='more' fxLayout="{{layout}}" fxLayoutAlign="center center"  ></app-displaynote>
+<app-displaynote [cards]="deletedcards" fxLayoutGap='2%' [more]='more' fxLayout="{{layout}}"
+  fxLayoutAlign="center center"></app-displaynote>
